--- a/grocery-dash/index.html
+++ b/grocery-dash/index.html
@@ -82,17 +82,14 @@
           <i class="bx bx-menu sidebarBtn"></i>
           <span class="dashboard">Dashboard</span>
         </div>
-
-       
-        <div class="dropdown">
-          <button class="btn btn-primary button dropdown-toggle" type="button" data-toggle="dropdown">User
-          <span class="caret"></span></button>
-          <ul class="dropdown-menu">
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
-            <li><a href="#">JavaScript</a></li>
-          </ul>
-        </div>
+        <ul class="d-flex">
+          <li><a href="#"><i class="fa fa-comment"></i></a></li>
+          <li><a href="#"><i class="fa fa-bell-slash"></i></a></li>
+          <li><a href="#"><i class="fa fa-cog"></i></a></li>
+          <li><a href="#"><img src="image/car3.png">Amit kumar</a></li>
+        </ul>
+   
+        
       </nav>
       <div class="home-content">
         <div class="overview-boxes">
